# robotica

./: .gitignore  .markdownlint.json  README.md  README.pptx  index.html
.devcontainer/: devcontainer.json
.github/workflows/: marp-to-pages.yml
docs/: 0. Presentación.html  0. Presentación.md  0_Presentacion.html  0_Presentacion.md  1.1. Introducción.html  1.1. Introducción.md  1_Introduccion.html  1_Introduccion.md  2.1. Robot Operating System (ROS).html  2.1. Robot Operating System (ROS).md  2_1_pybullet.html  2_1_ros.html  2_1_ros.md  2_2_gazebo.html  2_2_gazebo.md  2_2_pybullet.html  2_2_pybullet.md  3.1. Percepción del entorno.html  3.1. Percepción del entorno.md  3.2. El entorno de simulación Webots.html  3.2. El entorno de simulación Webots.md  3_1_Percepcion.html  3_1_Percepcion.md  3_2_Gazebo.html  3_2_Gazebo.md  3_2_Webots.html  3_2_Webots.md  3_2_gazebo.md  3_Percepcion.html  3_Percepcion.md  4.1. Actuación sobre el entorno.html  4.1. Actuación sobre el entorno.md  4_1_Actuacion.html  4_1_Actuacion.md  5.1. Control.html  5.1. Control.md  5.1. Introducción rápida a los sistemas de control.html  5.1. Introducción rápida a los sistemas de control.md  5.2. Control clásico.html  5.2. Control clásico.md  (+25 more)
notebooks/: pyproject.toml
notebooks/notebooks/: Algoritmos Evolutivos.ipynb  Aprendizaje por refuerzo - 1D-ungeon.ipynb  Ejemplo de implementación de un sistema de control borroso.ipynb  Introduccion a la Optimizacion.ipynb
ros2/hola_robot/: setup.cfg  setup.py
ros2/topics/: package.xml  setup.cfg  setup.py
style/: hegel.css  schema.css  structure.css
(+16 files in other folders)
